[FIX] Unable to remove manually added wallpaper

It's not necessary to assign m_removableWallpapers asynchronously, because the value assigned to it doesn't depend on the result of that asynch function.

!!! This MR is for the Plasma/5.25 branch only and it SHOULD NOT be cherry-picket into the master branch.

BUG: 457019


(cherry picked from commit d6d47393bab32dc60b43e0eeac16c035000a0358)